# VAMOS

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_codex_prompts.md  AGENTS_tasks.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODING_GUIDELINES.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  _analyze.py  debug_filter.txt  debug_out.txt  final_audit_latest.md  fix_mcp_config.py  fix_results.txt  inspect_campaign_tooling.sh  main.py  mkdocs.yml  pyproject.toml  real_operators.py  reproduce_api_fail.py  test.sh  test_debug.txt  test_debug_2.txt  test_output.txt  test_parallel_debug.txt  test_regression.txt  vamos-benchmark.cmd  vamos-zoo.cmd  zdt131072.py
.agent/docs/: AGENTS.md  AGENTS_codex_prompts.md  AGENTS_tasks.md
.agent/workflows/: dev.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
algorithm/: config.py  hypervolume.py
benchmarks/: bench_vamos.py
docs/: CODING_GUIDELINES.md  algorithms.md  analysis.md  api_reference.md  assist.md  cli.md  constraints.md  cookbook.md  engineering_audit.md  extending.md  getting-started.md  index.md  release_smoke.md  studio.md  tuning.md
examples/: archive_usage_nsga2.py  auto_nsga2_tuning_example.py  custom_problem_definition.py  engineering_design.py  engineering_design_pipeline.py  feature_selection.py  feature_selection_qubo.py  hyperparam_tuning.py  hyperparam_tuning_pipeline.py  ibea_zdt1.yaml  quickstart.py  racing_tuner_nsgaii.py  racing_tuner_parallel.py  tsp_tsplib_nsga2.py  welded_beam_constraints.py
experiments/: ARTIFACT_CONTRACT.md  ablation_aos_anytime.csv  ablation_aos_racing_tuner.csv  benchmark_all_backends.csv  benchmark_comprehensive.csv  benchmark_extended.csv  benchmark_frameworks.py  benchmark_paper.csv  benchmark_paper_constrained.csv  benchmark_paper_moead.csv  benchmark_paper_nsgaii_archive.csv  benchmark_paper_nsgaii_archive.csv.bak  benchmark_paper_nsgaii_ss.csv  benchmark_paper_nsgaiii.csv  benchmark_paper_smsemoa.csv  benchmark_paper_spea2.csv  benchmark_paper_wfg3d.csv  benchmark_test.csv  convergence_paper.csv  memory_benchmark.csv  reproduce_dtlz3_pymoo.py  scaling_vectorization.csv  statistical_tests.csv  statistical_tests_moead.csv  statistical_tests_smsemoa.csv  tuned_nsgaii.json  tuned_nsgaii_resolved.json  tuned_nsgaii_runs.csv  tuned_nsgaii_topk.json  tuner_history.csv  tuner_history.json  zcat_cross_framework.md
kernel/: numba_backend.py
notebooks/: 00_quickstart_vamos.ipynb  01_benchmarks_and_metrics.ipynb  02_sota_zdt_benchmark.ipynb  02_tuning_and_metaoptimization.ipynb  03_user_friendly_api.ipynb  04_hyperparameter_tuning.ipynb  05_real_world_problems.ipynb  06_discrete_encodings.ipynb  07_constrained_optimization.ipynb  08_algorithm_comparison.ipynb  09_mcdm_decision_making.ipynb  10_backends_and_performance.ipynb  11_paper_benchmarking.ipynb  14_scaling_analysis.ipynb  15_tuning_analysis.ipynb  18_search_dynamics.ipynb  20_interactive_pareto_explorer.ipynb  INDEX.ipynb  autonsga2_tuning.ipynb  nsgaii_problem_benchmark.ipynb  sota-zdt-final.ipynb  sota-zdt.ipynb  tsp_permutation_benchmark.ipynb  tuning_v1.ipynb  tuning_zdt1.ipynb
paper/: 01_run_paper_benchmark.py  02_run_ablation_aos_racing_tuner.py  03_run_scaling_experiment.py  04_update_paper_tables_from_csv.py  05_run_statistical_tests.py  06_update_ablation_tables_from_csv.py  07_update_scaling_tables_from_csv.py  08_compile_manuscript_pdf.py  09_update_tuned_config_from_json.py  10_update_anytime_tables_from_csv.py  11_sync_overleaf_sources.py  12_summarize_aos_switching_from_trace_csv.py  13_sweep_aos_hyperparams.py  14_update_frameworks_perf_variant_tables_from_csv.py  15_sync_overleaf_to_local_sources.py  16_update_igd_tables_from_csv.py  17_update_variant_hv_tables_from_csv.py  18_run_convergence_experiment.py  19_plot_convergence.py  20_run_additional_algorithms_benchmark.py  21_run_constrained_benchmark.py  22_plot_pareto_fronts.py  23_run_memory_benchmark.py  24_run_wfg3d_benchmark.py  25_plot_time_comparison.py  README.md  __init__.py  benchmark_utils.py  compare_dtlz3_robustness.py  debug_dtlz3_pymoo.py  error.txt  graphical_abstract.md  highlights.txt  paper_benchmark.ipynb  progress_utils.py  run_paper_benchmark.py  run_statistical_tests.py  test_dtlz3_seeds.py  update_paper_tables_from_csv.py
paper_MIC/: README.md  latexmkrc  main.bbl  main.blg  main.tex  references.bib
problem/: dtlz.py  zdt1.py
reports/: final_audit_001.md  final_audit_01_baseline.md  final_audit_02_mypy_before_after.md  final_audit_03_engineering_review.md  final_audit_04_perfect_finish.md  final_audit_05_zero_warnings_mypy_drop.md  mypy_after_summary.txt  mypy_after_target.txt  mypy_after_typing_pass.txt  mypy_current.txt  mypy_final.txt  mypy_latest.txt
scripts/: run_engine_study_full_continuous_all.sh  run_hv_archive_campaign_core_all.sh  verify_build_smoke.py
tests/: __init__.py  test_agents_health_link.py  test_algorithms_smoke.py  test_assist_apply.py  test_assist_catalog.py  test_assist_doctor.py  test_assist_explain.py  test_assist_go.py  test_assist_plan.py  test_assist_plan_auto.py  test_assist_plan_auto_openai_missing_dep.py  test_assist_plan_auto_override_filtering.py  test_assist_plan_auto_questions.py  test_assist_plan_auto_traces.py  test_assist_run.py  test_autonsga2_builder.py  test_backends_smoke.py  test_benchmark_reporting.py  test_build_smoke_guarded.py  test_cli_integration.py  test_cli_integration_config.py  test_cli_runner_behaviors.py  test_cli_smoke.py  test_config_space_multi_algorithm.py  test_config_variation.py  test_constraints.py  test_constraints_dsl.py  test_constraints_handling.py  test_crowding_archive.py  test_data_failures.py  test_discrete_and_mixed_operators.py  test_eval_backends.py  test_experiment_runner.py  test_genealogy_analytics.py  test_hv_zdt.py  test_hypervolume_fallback.py  test_import_time_smoke.py  test_kernel_failures.py  test_live_viz.py  test_logging_policy.py  (+47 more)
tools/: audit_full_repo.py  cleanup.py  health.py  update_public_api_snapshot.py
website/: mkdocs.yml  requirements.txt
(+1240 files in other folders)
