[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vamos"
version = "0.1.0"
description = "Vectorized Architecture for Multiobjective Optimization Studies"
requires-python = ">=3.10"
authors = [
  { name = "Nicolás R. Uribe", email = "nicolas.rodriguez@urjc.es" },
  { name = "Alberto Herrán", email = "alberto.herran@urjc.es" },
  { name = "Antonio J. Nebro", email = "ajnebro@uma.es" },
  { name = "J. Manuel Colmenar", email = "josemanuel.colmenar@urjc.es" },
]
maintainers = [
  { name = "Alberto Herrán", email = "alberto.herran@urjc.es" }
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
]
readme = "README.md"

[project.optional-dependencies]
backends = [
  "numba>=0.57",
  # NOTE: moocore>=0.4 does not exist on PyPI; latest releases are 0.1.x.
  "moocore>=0.1.10,<1.0",
]
benchmarks = [
  "pymoo>=0.6",
  "jmetalpy>=1.5",
  "pygmo>=2.19",
]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "ruff>=0.1.5",
  "pandas>=1.5",
  "nbformat>=5.9",
  "nbconvert>=7.10",
  "jinja2>=3.1",
]
notebooks = [
  "pandas>=1.5",
  "matplotlib>=3.7",
  "ipython>=8.10",
  "seaborn>=0.12",
  "scikit-learn>=1.3",
  "nbformat>=5.9",
  "nbconvert>=7.10",
]
examples = [
  "pandas>=1.5",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scikit-learn>=1.3",
]
studio = [
  "streamlit>=1.29",
  "plotly>=5.18",
  "pandas>=1.5"
]
autodiff = [
  "jax>=0.4"
]
docs = [
  "mkdocs>=1.6"
]

[project.scripts]
vamos = "vamos.experiment.cli.main:main"
vamos-self-check = "vamos.experiment.diagnostics.self_check:main"
vamos-benchmark = "vamos.experiment.benchmark.cli:main"
vamos-studio = "vamos.ux.studio.app:main"
vamos-zoo = "vamos.experiment.zoo.cli:main"
vamos-tune = "vamos.engine.tuning.cli:main"

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
pretty = true
exclude = ["build/", "dist/"]
ignore_missing_imports = false

[tool.mypy."vamos.foundation.problem.*"]
strict = true

[tool.mypy.vamos.engine.algorithm.config]
strict = true

[[tool.mypy.overrides]]
module = "vamos.foundation.core.optimize"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "vamos.engine.algorithm.registry"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "vamos.foundation.kernel.registry"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "moocore",
  "libhv",
  "numba",
  "pymoo.*",
  "jmetalpy.*",
  "pygmo.*",
  "streamlit",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: fast critical tests",
  "slow: slow tests",
  "examples: notebook or example smoke tests",
  "notebooks: notebook-dependent tests",
  "backends: optional backend-dependent tests",
  "studio: streamlit/UI dependent tests",
  "autodiff: tests requiring JAX/autodiff extras",
  "cli: command-line interface smoke tests",
  "numba: tests requiring the numba backend",
  "moocore: tests requiring the moocore backend",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vamos.foundation.data" = ["reference_fronts/*.csv", "weights/*.csv"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # Module level import not at top - intentional for sys.path and matplotlib backend
    "E741",  # Ambiguous variable name 'l' - used in WFG problems (standard math notation)
    "E501",  # Line too long - handled by black formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # Tests often need matplotlib.use() before imports
