[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vamos"
version = "0.1.0"
description = "Vectorized Architecture for Multiobjective Optimization Studies"
requires-python = ">=3.10"
authors = [
  { name = "VAMOS contributors" }
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "joblib>=1.3",
]
readme = "README.md"

[project.optional-dependencies]
# Simplified core groups (preferred)
compute = [
  "numba>=0.57",
  "moocore>=0.1.10,<1.0",
  "dask[distributed]>=2023.5.0",
]
research = [
  "pymoo>=0.6",
  "jmetalpy>=1.5",
  "pygmo>=2.19",
]
analysis = [
  "pandas>=1.5",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "networkx>=3.0",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "ipython>=8.10",
  "ipywidgets>=8.1",
  "nbformat>=5.9",
  "nbconvert>=7.10",
]
# High-performance compute backends
backends = [
  "numba>=0.57",
  "moocore>=0.1.10,<1.0",
  "dask[distributed]>=2023.5.0",
]
# Research and benchmarking
benchmarks = [
  "pymoo>=0.6",
  "jmetalpy>=1.5",
  "pygmo>=2.19",
]
# Analytics and visualization
analytics = [
  "pandas>=1.5",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "networkx>=3.0",
]
# Notebooks and exploratory analysis
notebooks = [
  "pandas>=1.5",
  "matplotlib>=3.7",
  "plotly>=5.18",
  "seaborn>=0.12",
  "scikit-learn>=1.3",
  "ipython>=8.10",
  "ipywidgets>=8.1",
  "nbformat>=5.9",
  "nbconvert>=7.10",
]
# Studio UI
studio = [
  "streamlit>=1.29",
  "plotly>=5.18",
  "pandas>=1.5",
]
# Examples
examples = [
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
]
# Autodiff helpers (JAX)
autodiff = [
  "jax>=0.4",
]
# Documentation
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "jinja2>=3.1",
]
# Development and documentation
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.9",
  "black>=23.0",
  "ruff>=0.6",
  "build>=1.2",
  "wheel>=0.40",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "nbformat>=5.9",
  "nbconvert>=7.10",
  "jinja2>=3.1",
  "pyyaml>=6.0",
]
all = [
  "numba>=0.57",
  "moocore>=0.1.10,<1.0",
  "dask[distributed]>=2023.5.0",
  "pymoo>=0.6",
  "jmetalpy>=1.5",
  "pygmo>=2.19",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "networkx>=3.0",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "ipython>=8.10",
  "ipywidgets>=8.1",
  "nbformat>=5.9",
  "nbconvert>=7.10",
  "streamlit>=1.29",
  "jax>=0.4",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.9",
  "black>=23.0",
  "ruff>=0.6",
  "build>=1.2",
  "wheel>=0.40",
]

[project.scripts]
vamos = "vamos.experiment.cli.main:main"
vamos-self-check = "vamos.experiment.diagnostics.self_check:main"
vamos-benchmark = "vamos.experiment.benchmark.cli:main"
vamos-studio = "vamos.ux.studio.app:main"
vamos-zoo = "vamos.experiment.zoo.cli:main"
vamos-tune = "vamos.engine.tuning.cli:main"
vamos-profile = "vamos.experiment.profiler.cli:main"

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
pretty = true
exclude = ["build/", "dist/"]
ignore_missing_imports = false
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "vamos.foundation.problem.*"
strict = true

[[tool.mypy.overrides]]
module = "vamos.engine.algorithm.config"
strict = true

[[tool.mypy.overrides]]
module = "vamos.engine.algorithm.registry"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "vamos.foundation.kernel.registry"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "moocore",
  "libhv",
  "dask",
  "dask.*",
  "numba",
  "plotly",
  "plotly.*",
  "pymoo.*",
  "jmetal.*",
  "jmetalpy.*",
  "pygmo.*",
  "sklearn",
  "sklearn.*",
  "streamlit",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: fast critical tests",
  "slow: slow tests",
  "examples: notebook or example smoke tests",
  "notebooks: notebook-dependent tests",
  "backends: optional backend-dependent tests",
  "studio: streamlit/UI dependent tests",
  "autodiff: tests requiring JAX/autodiff extras",
  "cli: command-line interface smoke tests",
  "numba: tests requiring the numba backend",
  "moocore: tests requiring the moocore backend",
  "e2e: integration gauntlet tests",
  "reference: scientific correctness verification tests",
]

[tool.setuptools.package-data]
"vamos" = ["py.typed"]
"vamos.foundation.data" = ["reference_fronts/*.csv", "weights/*.csv", "weights/*.dat"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # Module level import not at top - intentional for sys.path and matplotlib backend
    "E741",  # Ambiguous variable name 'l' - used in WFG problems (standard math notation)
    "E501",  # Line too long - handled by black formatter
]

[tool.ruff.lint.per-file-ignores]
[tool.semantic_release]
version_variable = [
    "src/vamos/foundation/version.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
