[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vamos"
version = "0.1.0"
description = "Vectorized Architecture for Multiobjective Optimization Studies"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "VAMOS contributors" }
]
keywords = [
  "multiobjective",
  "multi-objective",
  "optimization",
  "evolutionary algorithms",
  "moea",
  "pareto",
  "benchmarking",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "joblib>=1.3",
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Homepage = "https://github.com/NicolasRodriguezUribe/VAMOS"
Repository = "https://github.com/NicolasRodriguezUribe/VAMOS"
Issues = "https://github.com/NicolasRodriguezUribe/VAMOS/issues"
Documentation = "https://nicolasrodriguezuribe.github.io/VAMOS/"

[project.optional-dependencies]
# Simplified core groups (preferred)
compute = [
  "numba>=0.57",
  "moocore>=0.2.0,<1.0",
  "dask[distributed]>=2023.5.0",
]
research = [
  "pymoo>=0.6",
  "jmetalpy>=1.5",
  "deap>=1.4",
  "platypus-opt>=1.0.4",
  "pygmo>=2.19",
]
analysis = [
  "pandas>=1.5",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "networkx>=3.0",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "ipython>=8.10",
  "ipywidgets>=8.1",
  "nbformat>=5.9",
  "nbconvert>=7.10",
]
# Model-based tuning backends (optional)
tuning = [
  "optuna>=3.6",
  "smac>=2.0",
  "ConfigSpace>=1.2",
  "hpbandster>=0.7.4",
]
# Studio UI
studio = [
  "streamlit>=1.29",
  "plotly>=5.18",
  "pandas>=1.5",
]
# Examples
examples = [
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
]
# Autodiff helpers (JAX)
autodiff = [
  "jax>=0.4",
]
# Documentation
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "jinja2>=3.1",
]
openai = [
  "openai>=1.0.0",
]
# Development and documentation
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.9",
  "black>=23.0",
  "ruff>=0.6",
  "build>=1.2",
  "wheel>=0.40",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "nbformat>=5.9",
  "nbconvert>=7.10",
  "jinja2>=3.1",
  "pyyaml>=6.0",
]
all = [
  "numba>=0.57",
  "moocore>=0.2.0,<1.0",
  "dask[distributed]>=2023.5.0",
  "pymoo>=0.6",
  "jmetalpy>=1.5",
  "deap>=1.4",
  "platypus-opt>=1.0.4",
  "pygmo>=2.19",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "networkx>=3.0",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "ipython>=8.10",
  "ipywidgets>=8.1",
  "nbformat>=5.9",
  "nbconvert>=7.10",
  "optuna>=3.6",
  "smac>=2.0",
  "ConfigSpace>=1.2",
  "hpbandster>=0.7.4",
  "streamlit>=1.29",
  "jax>=0.4",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.9",
  "black>=23.0",
  "ruff>=0.6",
  "build>=1.2",
  "wheel>=0.40",
]

[project.scripts]
vamos = "vamos.experiment.cli.main:main"

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
pretty = true
exclude = ["build/", "dist/"]
ignore_missing_imports = false
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "vamos.foundation.problem.*"
strict = true

[[tool.mypy.overrides]]
module = "vamos.engine.algorithm.config"
strict = true

[[tool.mypy.overrides]]
module = [
  "vamos.engine.config.spec",
  "vamos.experiment.optimize",
  "vamos.experiment.optimization_result",
  "vamos.experiment.unified",
  "vamos.experiment.cli.*",
  "vamos.experiment.services.*",
  "vamos.ux.analysis.*",
  "vamos.ux.studio.*",
  "vamos.ux.results",
]
strict = true

[[tool.mypy.overrides]]
module = "vamos.engine.algorithm.registry"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "vamos.foundation.kernel.registry"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "moocore",
  "libhv",
  "pandas",
  "pandas.*",
  "dask",
  "dask.*",
  "jax",
  "jax.*",
  "numba",
  "plotly",
  "plotly.*",
  "pymoo.*",
  "jmetal.*",
  "jmetalpy.*",
  "pygmo.*",
  "sklearn",
  "sklearn.*",
  "streamlit",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: fast critical tests",
  "slow: slow tests",
  "examples: notebook or example smoke tests",
  "notebooks: notebook-dependent tests",
  "backends: optional backend-dependent tests",
  "studio: streamlit/UI dependent tests",
  "autodiff: tests requiring JAX/autodiff extras",
  "cli: command-line interface smoke tests",
  "numba: tests requiring the numba backend",
  "moocore: tests requiring the moocore backend",
  "e2e: integration gauntlet tests",
  "reference: scientific correctness verification tests",
]

[tool.setuptools.package-data]
"vamos" = ["py.typed"]
"vamos.foundation.data" = ["reference_fronts/*.csv", "weights/*.csv", "weights/*.dat", "tsplib/*.tsp"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "UP"]
ignore = [
    "E402",  # Module level import not at top - intentional for sys.path and matplotlib backend
    "E741",  # Ambiguous variable name 'l' - used in WFG problems (standard math notation)
    "E501",  # Line too long - handled by black formatter
]

[tool.ruff.lint.per-file-ignores]
[tool.semantic_release]
version_variable = [
    "src/vamos/foundation/version.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
